# sust_csecarnival_26_main_prelim

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  sample_output.json
api/: index.py
app/: main.py
app/models/: request.py  response.py
app/routers/: analyze.py
app/services/: classifier.py  investigator.py  llm_client.py  safety.py  transaction_matcher.py
docs/: architecture.md
tests/: _helpers.py  conftest.py  test_analyze.py  test_edge_adversarial.py  test_edge_structural.py  test_live_llm.py  test_llm_safety.py
